syntax = "proto3";

package oms.v1;

import "google/api/annotations.proto";

option go_package = "github.com/vladislavdragonenkov/oms/proto/oms/v1;omsv1";

// ---
// Базовые структуры и сервисы proto для Order Management Service.
// Описание соответствует контракту из docs/api.md (Фаза 1)
// ---

message Money {
  // Валюта в ISO-4217 (например, "USD").
  string currency = 1;
  // Сумма в минимальных единицах (копейках/центах).
  int64 amount_minor = 2;
}

message OrderItem {
  string sku = 1;
  int32 qty = 2;
  Money price = 3; // Цена за единицу, также в минимальных единицах.
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_RESERVED = 2;
  ORDER_STATUS_PAID = 3;
  ORDER_STATUS_CONFIRMED = 4;
  ORDER_STATUS_CANCELED = 5;
  ORDER_STATUS_REFUNDED = 6;
}

message Order {
  string id = 1;
  string customer_id = 2;
  OrderStatus status = 3;
  Money amount = 4; // Общая сумма заказа.
  repeated OrderItem items = 5;
  int64 version = 6; // Optimistic locking.
  string currency = 7; // Дублирование для удобства (чтение без Money).
}

message TimelineEvent {
  string type = 1;
  string reason = 2;
  int64 unix_time = 3; // Момент события в unix-времени.
}

// ---- Requests & Responses ----
message CreateOrderRequest {
  string customer_id = 1;
  repeated OrderItem items = 2;
  string currency = 3;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  Order order = 1;
  repeated TimelineEvent timeline = 2;
}

message ListOrdersRequest {
  string customer_id = 1;
  int32 page_size = 2;
  string page_token = 3;
  repeated OrderStatus filter_statuses = 4;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  string next_page_token = 2;
}

message PayOrderRequest {
  string order_id = 1;
}

message PayOrderResponse {
  string order_id = 1;
  OrderStatus status = 2; // ожидаемый статус, например pending/reserved.
}

message CancelOrderRequest {
  string order_id = 1;
  string reason = 2;
}

message CancelOrderResponse {
  string order_id = 1;
  OrderStatus status = 2;
}

message RefundOrderRequest {
  string order_id = 1;
  Money amount = 2; // Опционально частичный возврат.
  string reason = 3;
}

message RefundOrderResponse {
  string order_id = 1;
  OrderStatus status = 2;
}

// ---- gRPC сервис ----
service OrderService {
  // Создание заказа, запуск первичной саги.
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders"
      body: "*"
    };
  }
  
  // Получение статуса и деталей заказа.
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {
    option (google.api.http) = {
      get: "/v1/orders/{order_id}"
    };
  }
  
  // Список заказов с пагинацией и фильтром по статусам.
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {
    option (google.api.http) = {
      get: "/v1/orders"
    };
  }
  
  // Запуск платежа (асинхронный результат).
  rpc PayOrder(PayOrderRequest) returns (PayOrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders/{order_id}/pay"
      body: "*"
    };
  }
  
  // Отмена заказа и запуск компенсаций.
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders/{order_id}/cancel"
      body: "*"
    };
  }
  
  // Инициировать возврат средств.
  rpc RefundOrder(RefundOrderRequest) returns (RefundOrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders/{order_id}/refund"
      body: "*"
    };
  }
}
